<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/general_padding"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:contentDescription="@string/contentDescriptionPoster" />


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="Title"
        android:textAppearance="?attr/textAppearanceListItem"
        android:layout_toRightOf="@+id/posterImageView"
        android:layout_centerVertical="true" />

</RelativeLayout>